// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeProvider Base component includes a font 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
/>
`;

exports[`ThemeProvider accepts a custom breakpoints prop 1`] = `
.c1 {
  width: 100%;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

@media screen and (min-width:20em) {
  .c1 {
    width: 50%;
  }
}

@media screen and (min-width:32em) {
  .c1 {
    width: 25%;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    width={
      Array [
        1,
        0.5,
        0.25,
      ]
    }
  />
</div>
`;

exports[`ThemeProvider renders 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
/>
`;

exports[`ThemeProvider renders with legacy prop 1`] = `
.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.5;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
/>
`;
